examples/test/testpolicy3928.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3928
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key30: value16
      key2: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value1
          key25: value43
      podSelector:
        matchLabels:
          key28: value36
